hide any overflow on x axis, fix nav active and nav active ul by adding s to transition transforms, fix nav active ul li by adding p to bottom property

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ nav {
   border-radius: 3px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   transition: width 0.6s linear;
+  overflow-x: hidden;
 }
 
 nav.active {
@@ -43,7 +44,7 @@ nav ul {
   padding: 0;
   margin: 0;
   width: 0;
-  transition: width 0.6 linear;
+  transition: width 0.6s linear;
 }
 
 nav.active ul {
@@ -53,7 +54,7 @@ nav.active ul {
 nav ul li {
   transform: rotateY(0deg);
   opacity: 0;
-  transition: transform 0.6 linear, opacity 0.6 linear;
+  transition: transform 0.6s linear, opacity 0.6s linear;
 }
 
 nav.active ul li {
@@ -94,7 +95,7 @@ nav ul a {
 
 .icon .line2 {
   top: auto;
-  bottom: 10x;
+  bottom: 10px;
 }
 
 nav.active .icon .line1 {
